so delivery man works well, theres a cart,check out, then after the customer orders it goes to admin or manager and then they assign a delivery man and then both of them can update if the delivery is done, delivery man can report issues,see the income,and reported issues go to admin and manager

--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -22,7 +22,8 @@
         <a href="{{ url_for('manage_vaccinations') }}" class="block text-gray-700 hover:text-blue-500">Vaccination Schedule</a>
         <a href="{{ url_for('manage_production') }}" class="block text-gray-700 hover:text-blue-500">Log Egg & Meat Production</a>
         <a href="{{ url_for('manage_feed_resources') }}" class="block text-gray-700 hover:text-blue-500"> Feed & Resource Management</a>
-        
+        <a href="{{ url_for('admin_reported_issues') }}" class="block text-gray-700 hover:text-blue-500">
+          Reported Issues
         <a href="{{ url_for('record_sales') }}" class="block text-gray-700 hover:text-blue-500">
           Record Sales
         </a>
@@ -37,6 +38,7 @@
         <a href="{{ url_for('manage_orders') }}" class="block text-gray-700 hover:text-blue-500">
           Manage Orders
         </a>
+      
         
         
         
