--- a/templates/customer_dashboard.html
+++ b/templates/customer_dashboard.html
@@ -15,6 +15,7 @@
         <a href="{{ url_for('customer_dashboard') }}" class="block text-gray-700 hover:text-green-500">Dashboard</a>
         <a href="{{ url_for('profile_management') }}" class="block text-gray-700 hover:text-green-500">Profile Management</a>
         <a href="{{ url_for('shop') }}" class="block text-gray-700 hover:text-green-500">Shop now</a>
+        <a href="{{ url_for('view_cart') }}" class="block text-gray-700 hover:text-green-500">Shopping Cart</a>
         <a href="{{ url_for('track_customer_orders') }}" class="block text-gray-700 hover:text-green-500">Track My Orders</a>
         <a href="{{ url_for('logout') }}" class="block text-gray-700 hover:text-red-500">Logout</a>
       </nav>
